syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
  rpc FindMany(FindManyRequest) returns (FindManyResponse) {}
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {}
}

// CreateProduct

message CreateProductRequest {
  string name = 1;
  string sku = 2;
  int32 stock = 3;
  double price = 4;
}

message CreateProductResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 id = 3;
}

// Product Data

message productData {
  int32 id = 1;
  string name = 2;
  string sku = 3;
  int32 stock = 4;
  double price = 5;
}

// FindMany
message FindManyRequest {}
message FindManyResponse { repeated productData data = 1; }

// FindOne

message FindOneRequest { int32 id = 1; }

message FindOneResponse {
  int32 status = 1;
  repeated string error = 2;
  productData data = 3;
}

// DecreaseStock

message DecreaseStockRequest {
  int32 id = 1;
  int32 quantity = 2;
}

message DecreaseStockResponse {
  int32 status = 1;
  repeated string error = 2;
}